--- a/desafios/desafio010/style.css
+++ b/desafios/desafio010/style.css
@@ -20,6 +20,7 @@
 body{
     background-color:#45C4B0;
     margin: 0px;
+    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.411);
 
 }
 
@@ -31,8 +32,9 @@ header{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     border: 1px solid black;
-    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.411);
     text-shadow: 2px 2px rgba(0, 0, 0, 0.445);
+    margin: 0px -10px;
+    
 
 }
 header > h1{
@@ -61,7 +63,7 @@ header > nav{
 nav > a{
     margin-right: 8px;
     padding: 10px;
-    font-weight: 800;
+    font-weight: 600;
     font-style:normal;
     color: var(--cor5);
     text-decoration: none;
@@ -77,7 +79,7 @@ nav > a:hover{
 }
 
 main{
-    min-width: 400px;
+    min-width: 320px;
     max-width: 800px;
     background-color: white;
     border: 1px solid black;
@@ -178,6 +180,7 @@ footer{
     color: white;
     text-align: center;
     font-size: 18px;
+    margin: 0px -10px;
 }
 .dev{
     text-decoration: none;
